--- a/src/components/cta/cta.css
+++ b/src/components/cta/cta.css
@@ -54,6 +54,11 @@
     cursor: pointer;
 }
 
+.gpt3__cta-btn button:hover{
+    transition: all 0.5s ease;
+    background: rgb(65, 60, 60);
+}
+
 @media screen and (max-width: 650px) {
     .gpt3__cta{
         flex-direction: column; 
