--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -78,6 +78,11 @@
     border-bottom-right-radius: 5px;
 }
 
+.gpt3__header-content_input button:hover{
+    transition: all 0.5s ease;
+    background-color: #ff886d;
+}
+
 .gpt3__header-content_people {
     width: 100%;
     display: flex;
